[tool.poetry]
name = "bluepy-scratch-link"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
bluepy = {git = "https://github.com/IanHarvey/bluepy"}
pybluez = "^0.23"
websockets = "^8.1"
pyOpenSSL = "^19.1.0"
bleak = "^0.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
